# CHIP-8

./: .gitignore  CMakeLists.txt  README.md
include/: chip8.h  display.h
src/: chip8.cpp  display.cpp  main.cpp
